css/styles.css
:root {
  --primary-color: #357b70;
  --secondary-color: #e0b354;
  --dark-grey: #2b2b2b;
  --primary-background-color: LavenderBlush;
  --color1: #ffdce7;
  --color2: #ffe1eb;
  --secondary-background-color: Linen;
  --primary-accent-color: Rosybrown;
  --selected-link-color: #489c79;
  --visited-color: #05676e;
  --font-weight: bold;
}

* {
  box-sizing: border-box;
  padding: 10px;
  margin: 0px;
}

body {
  font-family: 'Ubuntu', sans-serif;
  font-weight: 400;
  background-color: var(--primary-background-color);
  line-height: normal;
}

h3 {
  display: inline-block;
}

/* .modal h3 {
  margin-bottom: 0;
  padding-left: 30px;
} */

.modal-body {
  padding: 20px;
}

/* .modal-body ul {
  list-style: none;
} */

button,
.btn {
  border: none;
  font-family: inherit;
  background-color: var(--primary-color);
  color: var(--secondary-background-color);
  text-decoration: none;
  padding: 10px;
  border-radius: 3px;
  border-bottom: 2px solid rgba(0, 0, 0, 0.3);
  transition: 0.4s opacity;
}

button:hover,
button:focus {
  cursor: pointer;
  opacity: 0.8;
}

.cocktail-categories {
  display: inline-flex;
  flex-direction: row;
  list-style-type: none;
  align-items: center;
  flex-wrap: wrap;
}

.cocktail-categories button {
  width: 300px;
  height: 50px;
  font-size: larger;
}

.cocktail-drinks {
  list-style: none;
  width: 250px;
}

.modal-img {
  max-width: 100%;
}

.btn {
  width: 150px;
}
/* 
.list-group {
  display: block;
  padding: 20px;
}
.group-list-item {
  display: block;
} */

